# DS_AST

./: CMakeLists.txt  README.md  main.c
Format/: format.c  format.h
Lex/: lexicalAnalyse.c
Syntax/: syntaxAnalyse.c  syntaxAnalyse.h
Syntax/stack/: stack.c  stack.h
Token/: gettoken.c  gettoken.h
